update config and about file and added getting started on posts

--- a/_config.yml
+++ b/_config.yml
@@ -14,39 +14,39 @@ lang: en
 
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone:
+timezone: Asia/Jakarta
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy                          # the main title
+title: Lukman Baidhowi                          # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: I'm a Software Engineer focusing on Back-End and IoT # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
+  I'm a Software Engineer focusing on Back-End and IoT. I'm Currently learning Go lang, Microservices, Kubernetes on Cloud GCP and also Node JS. I love trying new things. 
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'lukmanbaidhowi.github.io'
 
 github:
-  username: github_username             # change to your github username
+  username: lukmanbaidhowi             # change to your github username
 
 twitter:
-  username: twitter_username            # change to your twitter username
+  username: lukmanbaidhowi            # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com             # change to your email address
+  name: Lukman Baidhowi
+  email: lukman.baidhowi@gmail.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
+    - https://www.linkedin.com/in/lukmanbaidhowi
+    - https://twitter.com/lukmanbaidhowi      # change to your twitter homepage
+    - https://github.com/lukmanbaidhowi       # change to your github homepage
     # Uncomment below to add more social links
-    # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://www.facebook.com/m.lukmanbaidhowi
 
 google_site_verification:               # fill in to your verification string
 
@@ -81,7 +81,7 @@ theme_mode:   # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: https://avatars.githubusercontent.com/u/20519946?v=4
 
 # boolean type, the global switch for ToC in posts.
 toc: true
@@ -117,7 +117,7 @@ assets:
 pwa:
   enabled: true   # the option for PWA feature
 
-paginate: 10
+paginate: 5
 
 # ------------ The following options are not recommended to be modified ------------------
 
